--- a/Dockerfile.cpuonly
+++ b/Dockerfile.cpuonly
@@ -1,10 +1,20 @@
-FROM tensorflow/tensorflow
+FROM tensorflow/tensorflow:2.10.0
+LABEL maintainer="Nimbix, Inc." \
+      license="BSD"
+
+# Update SERIAL_NUMBER to force rebuild of all layers (don't use cached layers)
+ARG SERIAL_NUMBER
+ENV SERIAL_NUMBER ${SERIAL_NUMBER:-20220923.1001}
 
 RUN apt-get -y update && \
     apt-get -y install curl && \
     curl -H 'Cache-Control: no-cache' \
         https://raw.githubusercontent.com/nimbix/image-common/master/install-nimbix.sh \
         | bash -s -- --setup-nimbix-desktop
+
+# Install the rest of the packages...
+COPY requirements.txt /tmp/requirements.txt
+RUN python3 -m pip install -r /tmp/requirements.txt
 
 # Expose port 22 for local JARVICE emulation in docker
 EXPOSE 22
@@ -14,5 +24,6 @@ EXPOSE 5901
 EXPOSE 443
 
 # AppDef
-COPY AppDef-cpu.json /etc/NAE/AppDef.json
-
+COPY NAE/AppDef-cpu.json /etc/NAE/AppDef.json
+RUN curl --fail -X POST -d @/etc/NAE/AppDef.json https://cloud.nimbix.net/api/jarvice/validate
+RUN mkdir -p /etc/NAE && touch /etc/NAE/{screenshot.png,screenshot.txt,license.txt,AppDef.json}
