--- a/Dockerfile.notebook-cpu
+++ b/Dockerfile.notebook-cpu
@@ -4,7 +4,11 @@ LABEL maintainer="Nimbix, Inc." \
 
 # Update SERIAL_NUMBER to force rebuild of all layers (don't use cached layers)
 ARG SERIAL_NUMBER
-ENV SERIAL_NUMBER ${SERIAL_NUMBER:-20220908.1001}
+ENV SERIAL_NUMBER ${SERIAL_NUMBER:-20220923.1001}
+
+# Install the rest of the packages...
+COPY requirements.txt /tmp/requirements.txt
+RUN python3 -m pip install -r /tmp/requirements.txt
 
 ADD https://raw.githubusercontent.com/nimbix/notebook-common/${BRANCH:-master}/install-notebook-common /tmp/install-notebook-common
 RUN bash /tmp/install-notebook-common -b master -3 && rm /tmp/install-notebook-common
@@ -15,5 +19,4 @@ EXPOSE 443
 
 COPY NAE/AppDef-notebook-cpu.json /etc/NAE/AppDef.json
 RUN curl --fail -X POST -d @/etc/NAE/AppDef.json https://cloud.nimbix.net/api/jarvice/validate
-
 RUN mkdir -p /etc/NAE && touch /etc/NAE/{screenshot.png,screenshot.txt,license.txt,AppDef.json}
