--- a/NAE/AppDef-notebook-gpu.json
+++ b/NAE/AppDef-notebook-gpu.json
@@ -1,6 +1,6 @@
 {
-    "name": "TensorFlow 2.10.0 GPU Notebook",
-    "description": "Jupyter notebook with GPU-enabled TensorFlow 2.10.0 and Python 3",
+    "name": "TensorFlow 2.9.2 Notebook (GPU)",
+    "description": "Jupyter notebook with GPU-enabled TensorFlow and Python 3",
     "author": "Nimbix, Inc.",
     "licensed": true,
     "classifications": [
@@ -15,6 +15,7 @@
         "BLOCK_ARRAY",
         "OBJECT"
     ],
+    "scale_max": 1,
     "commands": {
         "Notebook": {
             "path": "/usr/local/bin/nimbix_notebook",
