--- a/NAE/AppDef.json
+++ b/NAE/AppDef.json
@@ -1,17 +1,14 @@
 {
-    "name": "TensorFlow (GPU) - Community version",
-    "description": "Community version of TensorFlow with GPU support, pulled from tensorflow/tensorflow:latest-gpu",
-    "author": "tensorflow.org",
+    "name": "TensorFlow 2.9.2 (GPU)",
+    "description": "Community version of TensorFlow with GPU support",
+    "author": "Nimbix, Inc.",
     "licensed": true,
     "classifications": [
         "Artificial Intelligence/Machine Learning/Deep Learning",
         "Software Development"
     ],
     "machines": [
-        "ng[4-9]",
-        "ngd[4-9]",
-        "ngq*",
-        "ngo*"
+        "ng*"
     ],
     "vault-types": [
         "FILE",
@@ -19,6 +16,7 @@
         "BLOCK_ARRAY",
         "OBJECT"
     ],
+    "scale_max": 1,
     "commands": {
         "Batch": {
             "path": "/bin/bash",
@@ -51,27 +49,12 @@
                 }
             }
         },
-        "Server": {
+        "Desktop": {
             "path": "/sbin/init",
             "interactive": true,
-            "name": "Server",
+            "name": "Desktop",
             "description": "Launch a session with all boot services, including SSH (if installed).  Connection address and credentials will appear in your web browser once available.",
             "parameters": {}
-        },
-        "GUI": {
-            "path": "/usr/local/bin/nimbix_desktop",
-            "interactive": true,
-            "name": "GUI",
-            "description": "Run a GUI command, and connect interactively directly from your web browser (requires Nimbix Desktop in image).",
-            "parameters": {
-                "command": {
-                    "name": "Command",
-                    "description": "Command to run",
-                    "type": "STR",
-                    "positional": true,
-                    "required": true
-                }
-            }
         }
     },
     "image": {
