--- a/Dockerfile.cpuonly
+++ b/Dockerfile.cpuonly
@@ -1,16 +1,22 @@
-FROM tensorflow/tensorflow:2.10.0
+FROM tensorflow/tensorflow:2.11.0
 LABEL maintainer="Nimbix, Inc." \
       license="BSD"
 
 # Update SERIAL_NUMBER to force rebuild of all layers (don't use cached layers)
 ARG SERIAL_NUMBER
-ENV SERIAL_NUMBER ${SERIAL_NUMBER:-20220923.1001}
+ENV SERIAL_NUMBER ${SERIAL_NUMBER:-20221228.1000}
+
+# RUN apt-get -y update && \
+#     apt-get -y install curl && \
+#     curl -H 'Cache-Control: no-cache' \
+#         https://raw.githubusercontent.com/nimbix/image-common/master/install-nimbix.sh \
+#         | bash -s -- --setup-nimbix-desktop
 
 RUN apt-get -y update && \
-    apt-get -y install curl && \
+    DEBIAN_FRONTEND=noninteractive apt-get -y install ca-certificates curl --no-install-recommends && \
     curl -H 'Cache-Control: no-cache' \
-        https://raw.githubusercontent.com/nimbix/image-common/master/install-nimbix.sh \
-        | bash -s -- --setup-nimbix-desktop
+        https://raw.githubusercontent.com/nimbix/jarvice-desktop/master/install-nimbix.sh \
+        | bash
 
 # Install the rest of the packages...
 COPY requirements.txt /tmp/requirements.txt
