--- a/Dockerfile.notebook
+++ b/Dockerfile.notebook
@@ -4,12 +4,12 @@ LABEL maintainer="Nimbix, Inc." \
 
 # Update SERIAL_NUMBER to force rebuild of all layers (don't use cached layers)
 ARG SERIAL_NUMBER
-ENV SERIAL_NUMBER ${SERIAL_NUMBER:-20230105.1006}
+ENV SERIAL_NUMBER ${SERIAL_NUMBER:-20230105.1007}
 
 # Install the rest of the packages
 COPY requirements.txt /tmp/requirements.txt
-RUN python3 -m pip install --upgrade pip
-RUN SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True python3 -m pip install -r /tmp/requirements.txt
+RUN python3 -m pip install --upgrade pip && \
+    SKLEARN_ALLOW_DEPRECATED_SKLEARN_PACKAGE_INSTALL=True python3 -m pip install -r /tmp/requirements.txt --no-cache-dir
 
 # Add notebook common
 ARG BRANCH=v2-comp
