--- a/Dockerfile.notebook-cpu
+++ b/Dockerfile.notebook-cpu
@@ -19,4 +19,5 @@ EXPOSE 443
 
 COPY NAE/AppDef-notebook-cpu.json /etc/NAE/AppDef.json
 RUN curl --fail -X POST -d @/etc/NAE/AppDef.json https://cloud.nimbix.net/api/jarvice/validate
-RUN mkdir -p /etc/NAE && touch /etc/NAE/{screenshot.png,screenshot.txt,license.txt,AppDef.json}
+RUN mkdir -p /etc/NAE && touch /etc/NAE/screenshot.png /etc/NAE/screenshot.txt /etc/NAE/license.txt /etc/NAE/AppDef.json
+
