Moved term call from Appdef to its own script

--- a/NAE/AppDef.json
+++ b/NAE/AppDef.json
@@ -83,7 +83,7 @@
             }
         },
         "Desktop": {
-            "path": "xfce4-terminal -T TensorFlow --working-directory=/data/",
+            "path": "/usr/local/scripts/start-desktop.sh",
             "interactive": true,
             "desktop": true,
             "name": "Desktop",
