--- a/NAE/AppDef-notebook-gpu.json
+++ b/NAE/AppDef-notebook-gpu.json
@@ -5,7 +5,7 @@
     "licensed": true,
     "appdefversion": 2,
     "classifications": [
-        "Machine Learning/Deep Learning"
+        "AI/Deep Learning"
     ],
     "machines": [
         "ng*"
