--- a/NAE/AppDef-notebook.json
+++ b/NAE/AppDef-notebook.json
@@ -5,8 +5,7 @@
     "licensed": true,
     "appdefversion": 2,
     "classifications": [
-        "Artificial Intelligence/Machine Learning/Deep Learning",
-        "Software Development"
+        "AI/Deep Learning"
     ],
     "machines": [
         "n*"
